<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View" />
        <import type="com.tisza.tarock.game.GameSessionState" />
        <variable name="gameViewModel" type="com.tisza.tarock.gui.viewmodel.GameViewModel"/>
    </data>

<FrameLayout
    android:id="@+id/messages_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    android:paddingBottom="0dp"
    >

    <LinearLayout
        android:id="@+id/messages_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/lobby_start_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/button_margin"
                android:text="@{gameViewModel.gameSession.players.size() >= 4 ? @string/lobby_start : @plurals/lobby_start_with_bots(4 - gameViewModel.gameSession.players.size(), 4 - gameViewModel.gameSession.players.size())}"
                android:visibility="@{gameViewModel.gameSession.state == GameSessionState.LOBBY ? View.VISIBLE : View.GONE}"
            />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/game_user_list_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/button_margin"
                android:visibility="@{gameViewModel.gameSession.state == GameSessionState.LOBBY ? View.VISIBLE : View.GONE}"
            />

            <ScrollView
                android:id="@+id/messages_scroll"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/button_margin"
                android:scrollbars="vertical"
                android:fillViewport="true"
                >
                <TextView
                    android:id="@+id/messages_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/game_text"
                    android:text="@{gameViewModel.messagesText}"
                />
            </ScrollView>

            <include
                android:id="@+id/messages_chat_edit_text"
                layout="@layout/chat_edit_text"
            />
        </LinearLayout>

        <ListView
            android:id="@+id/available_actions_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:divider="@null"
            android:dividerHeight="@dimen/button_margin"
            android:visibility="@{gameViewModel.gameSession.state == GameSessionState.GAME ? View.VISIBLE : View.GONE}"
        />
    </LinearLayout>


    <ScrollView
        android:id="@+id/ultimo_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:fillViewport="true"
        android:visibility="gone"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <Button
                android:id="@+id/ultimo_back_buton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin"
                android:text="@string/back"
                style="@style/button"
                />
            <LinearLayout
                android:id="@+id/ultimo_spinner_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/button_margin"
                />
            <Button
                android:id="@+id/ultimo_announce_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin"
                android:text="@string/announce"
                />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
</layout>
