<resources>
    <string name="facebook_app_id" translatable="false">1735167250066232</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1735167250066232</string>
    <string name="google_server_client_id" translatable="false">622849615637-7dth7ktpr1mgk36ol7h7me819vbc8flg.apps.googleusercontent.com</string>

    <string name="login_with_facebook">FACEBOOK</string>
    <string name="login_with_google">GOOGLE</string>

    <string name="update_available">Új verzió elérhető!</string>
    <string name="update_please">Frissítsd az alkalmazást a legújabb verzióra, hogy tudjál játszani</string>
    <string name="update_accept">Frissítés</string>
    <string name="update_deny">Kilépés</string>

    <string name="error_no_network_title">Nincs internetkapcsolat</string>
    <string name="error_no_network_message">A játékhoz internetkapcsolat szükséges</string>
    <string name="error_server_down_title">Szerver leállt</string>
    <string name="error_server_down_message">A Tarokk szerver sajnos jelenleg nem elérhető. Próbáld meg később!</string>
    <string name="error_server_error_title">Szerverhiba</string>
    <string name="error_server_error_message">""</string>
    <string name="error_login_unsuccessful_title">Sikertelen bejelentkezés</string>
    <string name="error_login_unsuccessful_message">""</string>

    <string name="game_created_notification_title">%1$s tarokkozni szeretne veled</string>
    <string name="game_created_notification_body">Játékosok: %1$s, %2$s, %3$s, %4$s</string>

    <string name="app_name" translatable="false">Tarokk</string>
    <string name="play" translatable="false">Play</string>
    <string name="settings">Beállítások</string>
    <string name="rules">Szabályok</string>
    <string name="logout">Kijelentkezés</string>
    <string name="new_game">Új játék</string>
    <string name="connecting">Csatlakozás a szerverhez&#8230;</string>
    <string name="logging_in">Bejelentkezés&#8230;</string>
    <string name="join_game">Belépés</string>
    <string name="join_game_kibic">Kibic</string>
    <string name="delete_game">Törlés</string>
    <string name="delete_game_confirm">Biztosan törlöd a játékot?</string>
    <string name="cancel">Mégse</string>
    <string name="anybody">Bárki</string>
    <string name="download_points">Pontszámok letöltése:</string>

    <string name="settings_notification">Értesítések engedélyezése</string>
    <string name="settings_sounds">Hangok</string>
    <string name="settings_double_click">Dupla kattintás</string>
    <string name="settings_language" translatable="false">Nyelv/Language</string>
    <string-array name="settings_language_names">
        <item>Magyar</item>
        <item>English</item>
    </string-array>
    <string-array name="settings_language_codes">
        <item>hu</item>
        <item>en</item>
    </string-array>
    <string name="settings_feedback_title">Visszajelzés küldése</string>
    <string name="settings_feedback_summary">Hibák jelentése, vagy új ötletek jelzése</string>

    <string name="lobby_create">Lobby létrehozása</string>
    <string name="lobby_enter">Belépés a lobbyba</string>
    <string name="lobby_start">Lobby indítása</string>
    <plurals name="lobby_start_with_bots">
        <item quantity="other">Lobby indítása %1$d robottal</item>
    </plurals>
    <string name="lobby_start_with_bots_confirm_title"><![CDATA[<font color=\'#FF0000\'>Biztosan elindítod a játékot robotokkal?</font>]]></string>
    <string name="lobby_start_with_bots_confirm_body"><![CDATA[A robotok véletlenszerűen döntenek, a játék <strong>nem</strong> élvezhető velük.<br>Hívd meg a barátaidat és játssz velük!]]></string>
    <string name="lobby_start_with_bots_confirm_yes">Indítás</string>
    <string name="lobby_delete">Lobby törlése</string>
    <string name="lobby_leave">Lobby elhagyása</string>

    <string name="players_search_hint">Játékos keresése…</string>
    <string name="players">Játékosok</string>
    <string name="create_game">Játék létrehozása</string>

    <string name="pager_announcing">Bemondások</string>
    <string name="pager_gameplay">Lejátszás</string>
    <string name="pager_statistics">Pontok</string>

    <string name="ok">OK</string>
    <string name="throw_cards">Bedob</string>
    <string name="back">Vissza</string>
    <string name="announce">Bemond</string>
    <string name="ultimo_button">ultimó…</string>
    <string name="chat_hint">Üzenet...</string>
    <string name="empty_seat">---</string>

    <string name="message_chat"><![CDATA[<font color=\'#FFC0C0\'>%1$s: %2$s</font>]]></string>
    <string name="message_action">%1$s: %2$s</string>
    <string name="message_fold">fektetett: %1$s</string>
    <string name="message_phase"><![CDATA[<big><b>%1$s</b></big><br>]]></string>
    <string name="message_bidding">LICIT</string>
    <string name="message_folding">SKARTOLÁS</string>
    <string name="message_calling">HÍVÁS</string>
    <string name="message_announcing">BEMONDÁSOK</string>
    <string name="message_cards_thrown">bedobta a lapjait</string>
    <string name="message_press_ok">Nyomj OK-t a folytatáshoz</string>
    <plurals name="message_fold_tarock">
        <item quantity="other">%1$d tarokkot fektetett</item>
    </plurals>

    <string name="bid3">3</string>
    <string name="bid2">2</string>
    <string name="bid1">1</string>
    <string name="bid0">Szóló</string>
    <string name="bid_passz">Passz</string>
    <string name="bid_keep">Tartom</string>

    <string name="game_type">Játék típus: </string>
    <string name="double_round_type">Duplakör: </string>

    <string-array name="game_type_array">
        <item>Paskievics</item>
        <item>Illusztrált</item>
        <item>Magas</item>
        <item>Zebi</item>
    </string-array>

    <string-array name="double_round_type_array">
        <item>Nincs</item>
        <item>Sikkasztó</item>
        <item>Halmozódó</item>
        <item>Szorzódó</item>
    </string-array>

    <string-array name="suit_array">
        <item>kőr</item>
        <item>káró</item>
        <item>pikk</item>
        <item>treff</item>
    </string-array>

    <string-array name="suitcard_value_array">
        <item>ász</item>
        <item>botos</item>
        <item>lovas</item>
        <item>dáma</item>
        <item>király</item>
    </string-array>

    <string-array name="tarokk_array">
        <item>pagát</item>
        <item>sas</item>
        <item>III</item>
        <item>IIII</item>
        <item>V</item>
        <item>VI</item>
        <item>VII</item>
        <item>VIII</item>
        <item>IX</item>
        <item>X</item>
        <item>XI</item>
        <item>XII</item>
        <item>XIII</item>
        <item>XIV</item>
        <item>XV</item>
        <item>XVI</item>
        <item>XVII</item>
        <item>XVIII</item>
        <item>XIX</item>
        <item>XX</item>
        <item>XXI</item>
        <item>skíz</item>
    </string-array>

    <string-array name="trick_array">
        <item>fácán</item>
        <item></item>
        <item></item>
        <item></item>
        <item>centrum</item>
        <item>kismadár</item>
        <item>nagymadár</item>
        <item>uhu</item>
        <item>ultimó</item>
    </string-array>

    <string-array name="contra_array">
        <item></item>
        <item>kontra</item>
        <item>rekontra</item>
        <item>szubkontra</item>
        <item>hirskontra</item>
        <item>mordkontra</item>
        <item>Fedák Sári</item>
    </string-array>

    <string name="silent">Csendes</string>
    <string name="passz">Passz</string>

    <string name="announcement_jatek">játék</string>
    <string name="announcement_hkp">hivatalból kontra parti</string>
    <string name="announcement_trull">trull</string>
    <string name="announcement_xxifogas">XXI fogás</string>
    <string name="announcement_banda">banda</string>
    <string name="announcement_negykiraly">négykirály</string>
    <string name="announcement_dupla">dupla</string>
    <string name="announcement_szinesites">színesítés</string>
    <string name="announcement_volat">volát</string>
    <string name="announcement_hosszudupla">hosszú dupla</string>
    <string name="announcement_kiralyultimo">színtelen király ultimó</string>
    <string name="announcement_ketkiralyok">kétkirályok játéka</string>
    <string name="announcement_haromkiralyok">háromkirályok játéka</string>
    <string name="announcement_zaroparos">zárópáros</string>
    <string name="announcement_kisszincsalad">kisszíncsalád</string>
    <string name="announcement_nagyszincsalad">nagyszíncsalád</string>
    <string name="announcement_parosfacan">párosfácán</string>
    <string name="announcement_kezbevacak">""</string>
    <string name="announcement_ultimo">""</string>
    <string name="announcement_unknown">ismeretlen</string>

    <string name="announcement_nyolctarokk">nyolc tarokk</string>
    <string name="announcement_kilenctarokk">kilenc tarokk</string>

    <string name="statictics_point_multiplier">Duplakör szorzó: %1$d</string>
    <string name="statistics_self">Játékosok figurái</string>
    <string name="statistics_opponent">Ellenjátékosok figurái</string>
    <string name="statistics_points">Pont</string>
    <string name="statictics_sum">Összesen:</string>

    <string name="donation">Támogatás</string>
    <string name="donation_title">Tarokk alkalmazás fejlesztés támogatása</string>
    <string name="donation_description">Nagyon örülök, hogy egyre népszerűbb a Tarokk alkalmazásom, és sokan örömmel játszanak vele. Az alkalmazást szabadidőmben fejlesztem hobbyként. Ha úgy érzed, hogy anyagilag is szívesen hozzájárulnál a munkámhoz, akkor a lenti gombbal ezt megteheted :).\nMinden támogatást nagyon köszönök!</string>
</resources>
