...
        android:textColorLink="#008"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
    />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/game_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
    />

    <LinearLayout
...
            android:adjustViewBounds="true"
            android:background="@null"
        />
    </LinearLayout>

    <Button
        android:id="@+id/new_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
    />
</LinearLayout>

