...
            android:text="@string/game_type"
            android:textSize="@dimen/large_text_size"
            android:gravity="center"
        />

        <Spinner
            android:id="@+id/game_type_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:entries="@array/game_type_array"
        />
    </LinearLayout>
...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
    />

    <Button
        android:id="@+id/create_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lobby_create"
    />

</LinearLayout>
...
